[gd_scene load_steps=17 format=2]

[ext_resource path="res://source/scripts/interface/DataFile.gd" type="Script" id=1]
[ext_resource path="res://assets/texture/interface/menu/data.png" type="Texture" id=2]
[ext_resource path="res://assets/interface/font/data/nishiki_teki.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/texture/interface/menu/data_focus_1.png" type="Texture" id=4]
[ext_resource path="res://assets/texture/interface/menu/data_pressed.png" type="Texture" id=5]
[ext_resource path="res://assets/texture/interface/menu/data_focus_0.png" type="Texture" id=6]
[ext_resource path="res://assets/shader/rainbow.shader" type="Shader" id=7]
[ext_resource path="res://source/scenes/object/imitation_snail.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/texture/interface/title_kon.png" type="Texture" id=9]
[ext_resource path="res://assets/texture/interface/hud/shell_stock_empty.png" type="Texture" id=10]
[ext_resource path="res://source/scenes/interface/data_health.tscn" type="PackedScene" id=11]

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 7 )
shader_param/strength = 0.125
shader_param/speed = 0.1
shader_param/angle = 155.0

[sub_resource type="DynamicFont" id=5]
size = 35
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_top = -10
extra_spacing_space = 5
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=4]
Label/fonts/font = SubResource( 5 )
RichTextLabel/fonts/normal_font = SubResource( 5 )

[sub_resource type="AnimatedTexture" id=1]
flags = 4
frames = 2
frame_0/texture = ExtResource( 6 )
frame_1/texture = ExtResource( 4 )
frame_1/delay_sec = 0.0

[sub_resource type="ViewportTexture" id=3]
viewport_path = NodePath("Viewport")

[node name="DataFile" type="TextureButton"]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 4 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 5 )
texture_focused = SubResource( 1 )
expand = true
script = ExtResource( 1 )
health_icon = ExtResource( 11 )
health_empty = ExtResource( 10 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 512, 512 )
own_world = true
transparent_bg = true
fxaa = true
render_target_v_flip = true

[node name="DirectionalLight" type="DirectionalLight" parent="Viewport"]
transform = Transform( 0.866025, 6.5567e-08, 0.5, -0.5, 1.13565e-07, 0.866025, 0, -1, 1.31134e-07, 0, 4, 0 )
layers = 0
light_color = Color( 0.482353, 0.482353, 0.482353, 1 )
light_energy = 1.45
light_specular = 0.0
light_bake_mode = 0
shadow_enabled = true
shadow_color = Color( 0.643137, 0.643137, 0.643137, 1 )
shadow_bias = 0.5
directional_shadow_split_1 = 0.05
directional_shadow_normal_bias = 0.1
directional_shadow_bias_split_scale = 0.1
directional_shadow_max_distance = 256.0

[node name="Camera" type="Camera" parent="Viewport"]
transform = Transform( -0.587785, 0.0282343, 0.808524, 0, 0.999391, -0.0348995, -0.809017, -0.0205134, -0.587427, 4, 0, -3 )
fov = 20.0

[node name="Position3D" type="Position3D" parent="Viewport"]

[node name="Snail" parent="Viewport/Position3D" instance=ExtResource( 8 )]

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
margin_left = 32.0
margin_top = 32.0
margin_right = 1888.0
margin_bottom = 1048.0
custom_constants/margin_right = 32
custom_constants/margin_top = 16

[node name="TextureRect" type="TextureRect" parent="MarginContainer/MarginContainer"]
margin_left = 1504.0
margin_top = 696.0
margin_right = 1824.0
margin_bottom = 1016.0
rect_min_size = Vector2( 320, 320 )
size_flags_horizontal = 8
size_flags_vertical = 8
texture = SubResource( 3 )
expand = true
stretch_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 32.0
margin_top = 32.0
margin_right = 1888.0
margin_bottom = 1048.0
alignment = 1

[node name="FileName" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
margin_right = 1856.0
margin_bottom = 28.0
rect_clip_content = false
size_flags_vertical = 4
bbcode_enabled = true
bbcode_text = "Placeholder"
text = "Placeholder"
fit_content_height = true

[node name="TimeAndLocation" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 1856.0
margin_bottom = 60.0
rect_clip_content = false
size_flags_vertical = 4
bbcode_enabled = true
bbcode_text = "Placeholder"
text = "Placeholder"
fit_content_height = true

[node name="Health" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 64.0
margin_bottom = 64.0
size_flags_horizontal = 0
custom_constants/separation = -16

[node name="Currency" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 1856.0
margin_bottom = 118.0
size_flags_vertical = 4

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/Currency"]
margin_top = 11.0
margin_right = 64.0
margin_bottom = 39.0
rect_min_size = Vector2( 64, 0 )
rect_clip_content = false
size_flags_vertical = 4
bbcode_enabled = true
bbcode_text = "000"
text = "000"
fit_content_height = true

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Currency"]
margin_left = 68.0
margin_right = 118.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
size_flags_vertical = 4
texture = ExtResource( 9 )
expand = true
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 956.0
margin_right = 1856.0
margin_bottom = 1016.0
size_flags_vertical = 10

[node name="PlayTime" type="RichTextLabel" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 1856.0
margin_bottom = 28.0
rect_clip_content = false
size_flags_vertical = 4
bbcode_enabled = true
bbcode_text = "Placeholder"
text = "Placeholder"
fit_content_height = true

[node name="LastPlayed" type="RichTextLabel" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 1856.0
margin_bottom = 60.0
rect_clip_content = false
size_flags_vertical = 4
bbcode_enabled = true
bbcode_text = "Placeholder"
text = "Placeholder"
fit_content_height = true
